k8s/todoapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp
  labels:
    name: todoapp
    app.kubernetes.io/managed-by: argo-cd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
