k8s/todoapp/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi
  namespace: todoapp
  labels:
    app.kubernetes.io/name: todoapi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: todoapi
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
